--- a/r4dsexercises/2_wrangle.Rmd
+++ b/r4dsexercises/2_wrangle.Rmd
@@ -113,5 +113,77 @@ library(tidyverse)
     instead of `table1`. What do you need to do first?
     
     
+### Exercises: tidyr
+
+1.  Why are `gather()` and `spread()` not perfectly symmetrical?  
+    Carefully consider the following example:
     
+    ```{r, eval = FALSE}
+    stocks <- tibble(
+      year   = c(2015, 2015, 2016, 2016),
+      half  = c(   1,    2,     1,    2),
+      return = c(1.88, 0.59, 0.92, 0.17)
+    )
+    stocks %>% 
+      spread(year, return) %>% 
+      gather("year", "return", `2015`:`2016`)
+    ```
+    
+    (Hint: look at the variable types and think about column _names_.)
+    
+    Both `spread()` and `gather()` have a `convert` argument. What does it 
+    do?
+
+1.  Why does this code fail?
+
+    ```{r, error = TRUE}
+    table4a %>% 
+      gather(1999, 2000, key = "year", value = "cases")
+    ```
+
+1.  Why does spreading this tibble fail? How could you add a new column to fix
+    the problem?
+
+    ```{r}
+    people <- tribble(
+      ~name,             ~key,    ~value,
+      #-----------------|--------|------
+      "Phillip Woods",   "age",       45,
+      "Phillip Woods",   "height",   186,
+      "Phillip Woods",   "age",       50,
+      "Jessica Cordero", "age",       37,
+      "Jessica Cordero", "height",   156
+    )
+    ```
+
+1.  Tidy the simple tibble below. Do you need to spread or gather it?
+    What are the variables?
+
+    ```{r}
+    preg <- tribble(
+      ~pregnant, ~male, ~female,
+      "yes",     NA,    10,
+      "no",      20,    12
+    )
+    ```
+    
+### Exercises
+
+1.  What do the `extra` and `fill` arguments do in `separate()`? 
+    Experiment with the various options for the following two toy datasets.
+    
+    ```{r, eval = FALSE}
+    tibble(x = c("a,b,c", "d,e,f,g", "h,i,j")) %>% 
+      separate(x, c("one", "two", "three"))
+    
+    tibble(x = c("a,b,c", "d,e", "f,g,i")) %>% 
+      separate(x, c("one", "two", "three"))
+    ```
+
+1.  Both `unite()` and `separate()` have a `remove` argument. What does it
+    do? Why would you set it to `FALSE`?
+
+1.  Compare and contrast `separate()` and `extract()`.  Why are there
+    three variations of separation (by position, by separator, and with
+    groups), but only one unite?
     
