--- a/slides/part3_tidyr.Rmd
+++ b/slides/part3_tidyr.Rmd
@@ -494,71 +494,20 @@ knitr::include_graphics("images/tidy-8.png")
 
 As you might have guessed from the common `key` and `value` arguments, `spread()` and `gather()` are complements. `gather()` makes wide tables narrower and longer; `spread()` makes long tables shorter and wider.
 
-### Exercises
-
-1.  Why are `gather()` and `spread()` not perfectly symmetrical?  
-    Carefully consider the following example:
-    
-    ```{r, eval = FALSE}
-    stocks <- tibble(
-      year   = c(2015, 2015, 2016, 2016),
-      half  = c(   1,    2,     1,    2),
-      return = c(1.88, 0.59, 0.92, 0.17)
-    )
-    stocks %>% 
-      spread(year, return) %>% 
-      gather("year", "return", `2015`:`2016`)
-    ```
-    
-    (Hint: look at the variable types and think about column _names_.)
-    
-    Both `spread()` and `gather()` have a `convert` argument. What does it 
-    do?
-
-1.  Why does this code fail?
-
-    ```{r, error = TRUE}
-    table4a %>% 
-      gather(1999, 2000, key = "year", value = "cases")
-    ```
-
-1.  Why does spreading this tibble fail? How could you add a new column to fix
-    the problem?
-
-    ```{r}
-    people <- tribble(
-      ~name,             ~key,    ~value,
-      #-----------------|--------|------
-      "Phillip Woods",   "age",       45,
-      "Phillip Woods",   "height",   186,
-      "Phillip Woods",   "age",       50,
-      "Jessica Cordero", "age",       37,
-      "Jessica Cordero", "height",   156
-    )
-    ```
-
-1.  Tidy the simple tibble below. Do you need to spread or gather it?
-    What are the variables?
-
-    ```{r}
-    preg <- tribble(
-      ~pregnant, ~male, ~female,
-      "yes",     NA,    10,
-      "no",      20,    12
-    )
-    ```
 
 ## Separating and uniting
 
 So far you've learned how to tidy `table2` and `table4`, but not `table3`. `table3` has a different problem: we have one column (`rate`) that contains two variables (`cases` and `population`). To fix this problem, we'll need the `separate()` function. You'll also learn about the complement of `separate()`: `unite()`, which you use if a single variable is spread across multiple columns.
 
-### Separate
+## Separate
 
 `separate()` pulls apart one column into multiple columns, by splitting wherever a separator character appears. Take `table3`:
 
 ```{r}
 table3
 ```
+
+## Separate
 
 The `rate` column contains both `cases` and `population` variables, and we need to split it into two variables. `separate()` takes the name of the column to separate, and the names of the columns to separate into, as shown in Figure \@ref(fig:tidy-separate) and the code below.
 
@@ -567,9 +516,7 @@ table3 %>%
   separate(rate, into = c("cases", "population"))
 ```
 
-```{r tidy-separate, echo = FALSE, out.width = "75%", fig.cap = "Separating `table3` makes it tidy"}
-knitr::include_graphics("images/tidy-17.png")
-```
+## Separate
 
 By default, `separate()` will split values wherever it sees a non-alphanumeric character (i.e. a character that isn't a number or letter). For example, in the code above, `separate()` split the values of `rate` at the forward slash characters. If you wish to use a specific character to separate a column, you can pass the character to the `sep` argument of `separate()`. For example, we could rewrite the code above as:
 
@@ -578,31 +525,17 @@ table3 %>%
   separate(rate, into = c("cases", "population"), sep = "/")
 ```
 
-(Formally, `sep` is a regular expression, which you'll learn more about in [strings].)
 
-Look carefully at the column types: you'll notice that `case` and `population` are character columns. This is the default behaviour in `separate()`: it leaves the type of the column as is. Here, however, it's not very useful as those really are numbers. We can ask `separate()` to try and convert to better types using `convert = TRUE`:
-
-```{r}
-table3 %>% 
-  separate(rate, into = c("cases", "population"), convert = TRUE)
-```
-
-You can also pass a vector of integers to `sep`. `separate()` will interpret the integers as positions to split at. Positive values start at 1 on the far-left of the strings; negative value start at -1 on the far-right of the strings. When using integers to separate strings, the length of `sep` should be one less than the number of names in `into`. 
-
-You can use this arrangement to separate the last two digits of each year. This make this data less tidy, but is useful in other cases, as you'll see in a little bit.
-
-```{r}
-table3 %>% 
-  separate(year, into = c("century", "year"), sep = 2)
-```
-
-### Unite
+## Unite
 
 `unite()` is the inverse of `separate()`: it combines multiple columns into a single column. You'll need it much less frequently than `separate()`, but it's still a useful tool to have in your back pocket.
 
 ```{r tidy-unite, echo = FALSE, out.width = "75%", fig.cap = "Uniting `table5` makes it tidy"}
 knitr::include_graphics("images/tidy-18.png")
 ```
+
+
+## Unite
 
 We can use `unite()` to rejoin the *century* and *year* columns that we created in the last example. That data is saved as `tidyr::table5`. `unite()` takes a data frame, the name of the new variable to create, and a set of columns to combine, again specified in `dplyr::select()` style:
 
@@ -611,32 +544,6 @@ table5 %>%
   unite(new, century, year)
 ```
 
-In this case we also need to use the `sep` argument. The default will place an underscore (`_`) between the values from different columns. Here we don't want any separator so we use `""`:
-
-```{r}
-table5 %>% 
-  unite(new, century, year, sep = "")
-```
-
-### Exercises
-
-1.  What do the `extra` and `fill` arguments do in `separate()`? 
-    Experiment with the various options for the following two toy datasets.
-    
-    ```{r, eval = FALSE}
-    tibble(x = c("a,b,c", "d,e,f,g", "h,i,j")) %>% 
-      separate(x, c("one", "two", "three"))
-    
-    tibble(x = c("a,b,c", "d,e", "f,g,i")) %>% 
-      separate(x, c("one", "two", "three"))
-    ```
-
-1.  Both `unite()` and `separate()` have a `remove` argument. What does it
-    do? Why would you set it to `FALSE`?
-
-1.  Compare and contrast `separate()` and `extract()`.  Why are there
-    three variations of separation (by position, by separator, and with
-    groups), but only one unite?
 
 ## Missing values
 
@@ -645,32 +552,14 @@ Changing the representation of a dataset brings up an important subtlety of miss
 * __Explicitly__, i.e. flagged with `NA`.
 * __Implicitly__, i.e. simply not present in the data.
 
-Let's illustrate this idea with a very simple data set:
 
-```{r}
-stocks <- tibble(
-  year   = c(2015, 2015, 2015, 2015, 2016, 2016, 2016),
-  qtr    = c(   1,    2,    3,    4,    2,    3,    4),
-  return = c(1.88, 0.59, 0.35,   NA, 0.92, 0.17, 2.66)
-)
-```
-
-There are two missing values in this dataset:
-
-* The return for the fourth quarter of 2015 is explicitly missing, because
-  the cell where its value should be instead contains `NA`.
-  
-* The return for the first quarter of 2016 is implicitly missing, because it
-  simply does not appear in the dataset.
-  
-One way to think about the difference is with this Zen-like koan: An explicit missing value is the presence of an absence; an implicit missing value is the absence of a presence.
-
-The way that a dataset is represented can make implicit values explicit. For example, we can make the implicit missing value explicit by putting years in the columns:
 
 ```{r}
 stocks %>% 
   spread(year, return)
 ```
+
+## Missing values
 
 Because these explicit missing values may not be important in other representations of the data, you can set `na.rm = TRUE` in `gather()` to turn explicit missing values implicit:
 
@@ -679,6 +568,7 @@ stocks %>%
   spread(year, return) %>% 
   gather(year, return, `2015`:`2016`, na.rm = TRUE)
 ```
+## Missing values
 
 Another important tool for making missing values explicit in tidy data is `complete()`:
 
@@ -687,174 +577,7 @@ stocks %>%
   complete(year, qtr)
 ```
 
+## Missing values
+
 `complete()` takes a set of columns, and finds all unique combinations. It then ensures the original dataset contains all those values, filling in explicit `NA`s where necessary.
 
-There's one other important tool that you should know for working with missing values. Sometimes when a data source has primarily been used for data entry, missing values indicate that the previous value should be carried forward:
-
-```{r}
-treatment <- tribble(
-  ~ person,           ~ treatment, ~response,
-  "Derrick Whitmore", 1,           7,
-  NA,                 2,           10,
-  NA,                 3,           9,
-  "Katherine Burke",  1,           4
-)
-```
-
-You can fill in these missing values with `fill()`. It takes a set of columns where you want missing values to be replaced by the most recent non-missing value (sometimes called last observation carried forward).
-
-```{r}
-treatment %>% 
-  fill(person)
-```
-
-### Exercises
-
-1.  Compare and contrast the `fill` arguments to `spread()` and `complete()`. 
-
-1.  What does the direction argument to `fill()` do?
-
-## Case Study
-
-To finish off the chapter, let's pull together everything you've learned to tackle a realistic data tidying problem. The `tidyr::who` dataset contains tuberculosis (TB) cases broken down by year, country, age, gender, and diagnosis method. The data comes from the *2014 World Health Organization Global Tuberculosis Report*, available at <http://www.who.int/tb/country/data/download/en/>.
-
-There's a wealth of epidemiological information in this dataset, but it's challenging to work with the data in the form that it's provided:
-
-```{r}
-who
-```
-
-This is a very typical real-life example dataset. It contains redundant columns, odd variable codes, and many missing values. In short, `who` is messy, and we'll need multiple steps to tidy it. Like dplyr, tidyr is designed so that each function does one thing well. That means in real-life situations you'll usually need to string together multiple verbs into a pipeline. 
-
-The best place to start is almost always to gather together the columns that are not variables. Let's have a look at what we've got: 
-
-* It looks like `country`, `iso2`, and `iso3` are three variables that 
-  redundantly specify the country.
-  
-* `year` is clearly also a variable.
-
-* We don't know what all the other columns are yet, but given the structure 
-  in the variable names (e.g. `new_sp_m014`, `new_ep_m014`, `new_ep_f014`) 
-  these are likely to be values, not variables.
-
-So we need to gather together all the columns from `new_sp_m014` to `newrel_f65`. We don't know what those values represent yet, so we'll give them the generic name `"key"`. We know the cells represent the count of cases, so we'll use the variable `cases`. There are a lot of missing values in the current representation, so for now we'll use `na.rm` just so we can focus on the values that are present.
-
-```{r}
-who1 <- who %>% 
-  gather(new_sp_m014:newrel_f65, key = "key", value = "cases", na.rm = TRUE)
-who1
-```
-
-We can get some hint of the structure of the values in the new `key` column by counting them:
-
-```{r}
-who1 %>% 
-  count(key)
-```
-
-You might be able to parse this out by yourself with a little thought and some experimentation, but luckily we have the data dictionary handy. It tells us:
-
-1.  The first three letters of each column denote whether the column 
-    contains new or old cases of TB. In this dataset, each column contains 
-    new cases.
-
-1.  The next two letters describe the type of TB:
-    
-    *   `rel` stands for cases of relapse
-    *   `ep` stands for cases of extrapulmonary TB
-    *   `sn` stands for cases of pulmonary TB that could not be diagnosed by 
-        a pulmonary smear (smear negative)
-    *   `sp` stands for cases of pulmonary TB that could be diagnosed be 
-        a pulmonary smear (smear positive)
-
-3.  The sixth letter gives the sex of TB patients. The dataset groups 
-    cases by males (`m`) and females (`f`).
-
-4.  The remaining numbers gives the age group. The dataset groups cases into 
-    seven age groups:
-    
-    * `014` = 0 -- 14 years old
-    * `1524` = 15 -- 24 years old
-    * `2534` = 25 -- 34 years old
-    * `3544` = 35 -- 44 years old
-    * `4554` = 45 -- 54 years old
-    * `5564` = 55 -- 64 years old
-    * `65` = 65 or older
-
-We need to make a minor fix to the format of the column names: unfortunately the names are slightly inconsistent because instead of `new_rel` we have `newrel` (it's hard to spot this here but if you don't fix it we'll get errors in subsequent steps). You'll learn about `str_replace()` in [strings], but the basic idea is pretty simple: replace the characters "newrel" with "new_rel". This makes all variable names consistent.
-
-```{r}
-who2 <- who1 %>% 
-  mutate(key = stringr::str_replace(key, "newrel", "new_rel"))
-who2
-```
-
-We can separate the values in each code with two passes of `separate()`. The first pass will split the codes at each underscore.
-
-```{r}
-who3 <- who2 %>% 
-  separate(key, c("new", "type", "sexage"), sep = "_")
-who3
-```
-
-Then we might as well drop the `new` column because it's constant in this dataset. While we're dropping columns, let's also drop `iso2` and `iso3` since they're redundant.
-
-```{r}
-who3 %>% 
-  count(new)
-who4 <- who3 %>% 
-  select(-new, -iso2, -iso3)
-```
-
-Next we'll separate `sexage` into `sex` and `age` by splitting after the first character:
-
-```{r}
-who5 <- who4 %>% 
-  separate(sexage, c("sex", "age"), sep = 1)
-who5
-```
-
-The `who` dataset is now tidy!
-
-I've shown you the code a piece at a time, assigning each interim result to a new variable. This typically isn't how you'd work interactively. Instead, you'd gradually build up a complex pipe:
-
-```{r, results = "hide"}
-who %>%
-  gather(code, value, new_sp_m014:newrel_f65, na.rm = TRUE) %>% 
-  mutate(code = stringr::str_replace(code, "newrel", "new_rel")) %>%
-  separate(code, c("new", "var", "sexage")) %>% 
-  select(-new, -iso2, -iso3) %>% 
-  separate(sexage, c("sex", "age"), sep = 1)
-```
-
-### Exercises
-
-1.  In this case study I set `na.rm = TRUE` just to make it easier to
-    check that we had the correct values. Is this reasonable? Think about
-    how missing values are represented in this dataset. Are there implicit
-    missing values? What's the difference between an `NA` and zero? 
-
-1.  What happens if you neglect the `mutate()` step?
-    (`mutate(key = stringr::str_replace(key, "newrel", "new_rel"))`)
-
-1.  I claimed that `iso2` and `iso3` were redundant with `country`. 
-    Confirm this claim.
-
-1.  For each country, year, and sex compute the total number of cases of 
-    TB. Make an informative visualisation of the data.
-
-## Non-tidy data
-
-Before we continue on to other topics, it's worth talking briefly about non-tidy data. Earlier in the chapter, I used the pejorative term "messy" to refer to non-tidy data. That's an oversimplification: there are lots of useful and well-founded data structures that are not tidy data. There are two main reasons to use other data structures:
-
-* Alternative representations may have substantial performance or space 
-  advantages.
-  
-* Specialised fields have evolved their own conventions for storing data
-  that may be quite different to the conventions of  tidy data.
-
-Either of these reasons means you'll need something other than a tibble (or data frame). If your data does fit naturally into a rectangular structure composed of observations and variables, I think tidy data should be your default choice. But there are good reasons to use other structures; tidy data is not the only way.
-
-If you'd like to learn more about non-tidy data, I'd highly recommend this thoughtful blog post by Jeff Leek: <http://simplystatistics.org/2016/02/17/non-tidy-data/>
-  
-    
