--- a/slides/part6_ggplot_intro.Rmd
+++ b/slides/part6_ggplot_intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to the tidyverse: Data analysis with `infer` and `broom`""
+title: "Introduction to the tidyverse: A very brief introduction to `ggplot2()`""
 author: |
         | Christopher Skovron
         | Northwestern University 
@@ -20,502 +20,620 @@ setwd('~/Dropbox/tidyverse-workshop/')
 ```
 
 
-## HOw do I do tidy data analysis? 
 
-Everything we've seen so far has been nicely organized
-
+## Prerequisites
 
 
-
-## Infer
- 
-- Some material from [Chester Ismay's recent talk at UseR](https://github.com/ismayc/talks/)
-
-
-
-```{r echo=FALSE}
+```{r setup}
 library(tidyverse)
-stop_type <- c(rep("complete", 265), rep("not_complete", 52))
-vehicle_type <- c(rep("single", 151), rep("lead", 38), rep("follow", 76),
-  rep("single", 25), rep("lead", 5), rep("follow", 22))
-car_stop <- data_frame(stop_type, vehicle_type)
-write_rds(car_stop, "car_stop.rds")
-set.seed(2)
 ```
 
 
-```{r echo=FALSE}
-library(tidyverse)
-set.seed(2)
-# https://ismayc.github.io/talks/infer-useR/car_stop.rds
-# download.file("http://bit.ly/car_stop_rds", destfile = "car_stop.rds")
-car_stop <- read_rds("car_stop.rds")
-car_stop %>% sample_n(10)
-```
-
-
-## Let's do this in R
-
-- Using a `data` argument
-
-```{r eval=FALSE}
-chisq.test(data = car_stop, x = stop_type, y = vehicle_type)
-```
-
---
-
-```
-Error in chisq.test(data = car_stop, x = stop_type, 
-  y = vehicle_type)
-```  
-
---
-
-- Using a formula
-
-```{r eval=FALSE}
-chisq.test(data = car_stop, 
-           formula = vehicle_type ~ stop_type)
-```
---
-
-```
-Error in chisq.test(data = car_stop, 
-  formula = vehicle_type ~ stop_type)
-```
-
-<br>
----
-
-## Finally
+## Example data: the `mpg` data frame
 
 ```{r}
-chisq.test(car_stop$stop_type, car_stop$vehicle_type)
+mpg
 ```
 
----
+Among the variables in `mpg` are:
 
-layout: false
+1. `displ`, a car's engine size, in litres.
 
-## 
+1. `hwy`, a car's fuel efficiency on the highway, in miles per gallon (mpg). 
+  A car with a low fuel efficiency consumes more fuel than a car with a high 
+  fuel efficiency when they travel the same distance. 
 
-```{r eval=FALSE}
-?chisq.test()
-```
 
-[![Chisq test image](chisq.png)](https://www.rdocumentation.org/packages/stats/versions/3.4.3/topics/chisq.test)
+## Creating a ggplot
 
----
-
-class: inverse
-layout: true
-
-.footer[Slides available at <http://bit.ly/infer-useR> <br> Package webpage at <https://infer.netlify.com>]
-
----
-
-```{r echo=FALSE, fig.height=7}
-deg_freedom <- 2
-chisq_dist <- ggplot(data.frame(x = c(qchisq(0.001, deg_freedom), qchisq(0.999, deg_freedom))), aes(x)) + 
-    stat_function(fun = dchisq, args = list(df = deg_freedom), color = "black") +
-    xlab("") +
-    ylab("") +
-    geom_vline(xintercept = chisq.test(car_stop$stop_type, car_stop$vehicle_type)$statistic, color = "red")
-chisq_dist + 
-  ggtitle("Chi-square distribution with 2 degrees of freedom")   
-```
-
-P-value is `r round(chisq.test(car_stop$stop_type, car_stop$vehicle_type)$p.value, 4)`.
----
-
-## `infer` Teaser - Maybe a different approach?
+To plot `mpg`, run this code to put `displ` on the x-axis and `hwy` on the y-axis:
 
 ```{r}
-library(infer)
-car_stop %>% chisq_test(vehicle_type ~ stop_type)
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
 ```
 
-```{r echo=FALSE}
-knitr::include_graphics("figure/v0.3.0.png")
+## Arguments 
+`ggplot()` creates a coordinate system that you can add layers to. The first argument of `ggplot()` is the dataset to use in the graph. So `ggplot(data = mpg)` creates an empty graph, but it's not very interesting so I'm not going to show it here.
+
+## Arguments 
+
+You complete your graph by adding one or more layers to `ggplot()`. The function `geom_point()` adds a layer of points to your plot, which creates a scatterplot. ggplot2 comes with many geom functions that each add a different type of layer to a plot.
+
+## Arguments 
+
+Each geom function in ggplot2 takes a `mapping` argument. This defines how variables in your dataset are mapped to visual properties. The `mapping` argument is always paired with `aes()`, and the `x` and `y` arguments of `aes()` specify which variables to map to the x and y axes. ggplot2 looks for the mapped variable in the `data` argument, in this case, `mpg`.
+
+## A graphing template
+
+
+```{r eval = FALSE}
+ggplot(data = <DATA>) + 
+  <GEOM_FUNCTION>(mapping = aes(<MAPPINGS>))
 ```
 
 
----
-
-Is there an association between arrival pattern and whether or not a complete stop was made?
-
-## The null hypothesis
-
-> No association exists between the arrival vehicle's position and whether
-or not it makes a complete stop.
-
-## The alternative hypothesis
-
-> An association exists between the arrival vehicle's position and
-whether or not it makes a complete stop.
-
----
-
-layout: false
-
-## How can computation help us to understand what is going on here?
-
---
-
-[![Only One Test](downey.png)](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html)
-
----
-
-class: inverse
-layout: true
-
-.footer[Slides available at <http://bit.ly/infer-useR> <br> Package webpage at <https://infer.netlify.com>]
-
----
+## Aesthetic mappings
 
 
-## The tricky step
+In the plot below, one group of points (highlighted in red) seems to fall outside of the linear trend. These cars have a higher mileage than you might expect. How can you explain these cars? 
 
---
+```{r, echo = FALSE}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) +
+  geom_point() + 
+  geom_point(data = dplyr::filter(mpg, displ > 5, hwy > 20), colour = "red", size = 2.2)
+```
 
-Modeling the null hypothesis
-  - How do we simulate data assuming the null hypothesis is true in our problem (there is no association between the variables)?
---
-
-  - What might the sample data look like if the null was true?
+## Arguments 
 
 
----
+You can add a third variable, like `class`, to a two dimensional scatterplot by mapping it to an __aesthetic__. An aesthetic is a visual property of the objects in your plot. Aesthetics include things like the size, the shape, or the color of your points. 
 
-### Properties of the original sample collected
+```{r, echo = FALSE, asp = 1/4}
+ggplot() +
+  geom_point(aes(1, 1), size = 20) +
+  geom_point(aes(2, 1), size = 10) + 
+  geom_point(aes(3, 1), size = 20, shape = 17) + 
+  geom_point(aes(4, 1), size = 20, colour = "blue") + 
+  scale_x_continuous(NULL, limits = c(0.5, 4.5), labels = NULL) + 
+  scale_y_continuous(NULL, limits = c(0.9, 1.1), labels = NULL) + 
+  theme(aspect.ratio = 1/3)
+```
+## Arguments 
+
+You can convey information about your data by mapping the aesthetics in your plot to the variables in your dataset. For example, you can map the colors of your points to the `class` variable to reveal the class of each car.
 
 ```{r}
-car_stop %>% dplyr::count(stop_type, vehicle_type)
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, color = class))
 ```
 
---
+## Arguments 
+
+In the above example, we mapped `class` to the color aesthetic, but we could have mapped `class` to the size aesthetic in the same way. In this case, the exact size of each point would reveal its class affiliation. We get a _warning_ here, because mapping an unordered variable (`class`) to an ordered aesthetic (`size`) is not a good idea.
 
 ```{r}
-( orig_table <- car_stop %>% 
-    janitor::tabyl(stop_type, vehicle_type) )
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, size = class))
+```
+## Arguments 
+
+Or we could have mapped `class` to the _alpha_ aesthetic, which controls the transparency of the points, or the shape of the points.
+
+```{r out.width = "50%", fig.align = 'default', warning = FALSE, fig.asp = 1/2, fig.cap =""}
+# Left
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, alpha = class))
+
+# Right
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, shape = class))
 ```
 
+## Arguments 
 
----
-
-### Permute the sample data <br> - Shuffle `stop_type` across `vehicle_type`
-
-```{r echo=FALSE}
-library(infer)
-set.seed(3)
-(perm1 <- car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1, type = "permute") %>% 
-  ungroup() %>% 
-  dplyr::select(-replicate) %>% 
-  sample_n(size = nrow(car_stop)))
-```
---
-
-```{r echo=FALSE}
-#( new_table <- table(perm1$stop_type, perm1$vehicle_type) )
-( new_table <- perm1 %>% janitor::tabyl(stop_type, vehicle_type) )
-```
-
-
----
-
-## Comparing the original and permuted sample
+You can also _set_ the aesthetic properties of your geom manually. For example, we can make all of the points in our plot blue:
 
 ```{r}
-orig_table %>% janitor::adorn_totals(where = c("row", "col"))
-new_table %>% janitor::adorn_totals(where = c("row", "col"))
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), color = "blue")
 ```
 
----
-
-layout: false
-
-## Where are we?
-
-[![Only One Test](downey.png)](http://allendowney.blogspot.com/2016/06/there-is-still-only-one-test.html)
-
----
-
-class: inverse
-layout: true
-
-.footer[Slides available at <http://bit.ly/infer-useR> <br> Package webpage at <https://infer.netlify.com>]
-
----
+Here, the color doesn't convey information about a variable, but only changes the appearance of the plot. To set an aesthetic manually, set the aesthetic by name as an argument of your geom function; i.e. it goes _outside_ of `aes()`. You'll need to pick a value that makes sense for that aesthetic:
 
 
-## Chi-square test statistic
+### Exercises
 
-- Measure of how far what we observed in our sample is from what we would expect if the null hypothesis was true ([Wikipedia](https://en.wikipedia.org/wiki/Pearson%27s_chi-squared_test))
+1.  What's gone wrong with this code? Why are the points not blue?
 
---
+    ```{r}
+    ggplot(data = mpg) + 
+      geom_point(mapping = aes(x = displ, y = hwy, color = "blue"))
+    ```
+    
+1.  Which variables in `mpg` are categorical? Which variables are continuous? 
+    (Hint: type `?mpg` to read the documentation for the dataset). How
+    can you see this information when you run `mpg`?
+
+1.  Map a continuous variable to `color`, `size`, and `shape`. How do
+    these aesthetics behave differently for categorical vs. continuous
+    variables? 
+    
+1.  What happens if you map the same variable to multiple aesthetics? 
+
+1.  What does the `stroke` aesthetic do? What shapes does it work with?
+    (Hint: use `?geom_point`)
+    
+1.  What happens if you map an aesthetic to something other than a variable 
+    name, like `aes(colour = displ < 5)`?  
+
+
+## Facets
+
+One way to add additional variables is with aesthetics. Another way, particularly useful for categorical variables, is to split your plot into __facets__, subplots that each display one subset of the data. 
+
+To facet your plot by a single variable, use `facet_wrap()`. The first argument of `facet_wrap()` should be a formula, which you create with `~` followed by a variable name (here "formula" is the name of a data structure in R, not a synonym for "equation"). The variable that you pass to `facet_wrap()` should be discrete. 
 
 ```{r}
-car_stop %>% infer::chisq_stat(vehicle_type ~ stop_type)
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) + 
+  facet_wrap(~ class, nrow = 2)
 ```
+
+To facet your plot on the combination of two variables, add `facet_grid()` to your plot call. The first argument of `facet_grid()` is also a formula. This time the formula should contain two variable names separated by a `~`. 
 
 ```{r}
-chisq.test(car_stop$stop_type, car_stop$vehicle_type)$statistic
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) + 
+  facet_grid(drv ~ cyl)
 ```
 
+If you prefer to not facet in the rows or columns dimension, use a `.` instead of a variable name, e.g. `+ facet_grid(. ~ cyl)`.
 
----
+### Exercises
 
-## For the permuted data
+1.  What happens if you facet on a continuous variable?
+
+1.  What do the empty cells in plot with `facet_grid(drv ~ cyl)` mean?
+    How do they relate to this plot?
+    
+    ```{r, eval = FALSE}
+    ggplot(data = mpg) + 
+      geom_point(mapping = aes(x = drv, y = cyl))
+    ```
+
+1.  What plots does the following code make? What does `.` do?
+
+    ```{r eval = FALSE}
+    ggplot(data = mpg) + 
+      geom_point(mapping = aes(x = displ, y = hwy)) +
+      facet_grid(drv ~ .)
+    
+    ggplot(data = mpg) + 
+      geom_point(mapping = aes(x = displ, y = hwy)) +
+      facet_grid(. ~ cyl)
+    ```
+
+1.  Take the first faceted plot in this section:
+
+    ```{r, eval = FALSE}
+    ggplot(data = mpg) + 
+      geom_point(mapping = aes(x = displ, y = hwy)) + 
+      facet_wrap(~ class, nrow = 2)
+    ```
+    
+    What are the advantages to using faceting instead of the colour aesthetic?
+    What are the disadvantages? How might the balance change if you had a 
+    larger dataset?
+    
+1.  Read `?facet_wrap`. What does `nrow` do? What does `ncol` do? What other
+    options control the layout of the individual panels? Why doesn't
+    `facet_grid()` have `nrow` and `ncol` argument?
+
+1.  When using `facet_grid()` you should usually put the variable with more
+    unique levels in the columns. Why?
+
+## Geometric objects
+
+How are these two plots similar? 
+
+```{r echo = FALSE, out.width = "50%", fig.align="default", message = FALSE}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+
+ggplot(data = mpg) + 
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+
+Both plots contain the same x variable, the same y variable, and both describe the same data. But the plots are not identical. Each plot uses a different visual object to represent the data. In ggplot2 syntax, we say that they use different __geoms__.
+
+A __geom__ is the geometrical object that a plot uses to represent data. People often describe plots by the type of geom that the plot uses. For example, bar charts use bar geoms, line charts use line geoms, boxplots use boxplot geoms, and so on. Scatterplots break the trend; they use the point geom. As we see above, you can use different geoms to plot the same data. The plot on the left uses the point geom, and the plot on the right uses the smooth geom, a smooth line fitted to the data. 
+
+To change the geom in your plot, change the geom function that you add to `ggplot()`. For instance, to make the plots above, you can use this code:
+
+```{r eval = FALSE}
+# left
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+
+# right
+ggplot(data = mpg) + 
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+
+Every geom function in ggplot2 takes a `mapping` argument. However, not every aesthetic works with every geom. You could set the shape of a point, but you couldn't set the "shape" of a line. On the other hand, you _could_ set the linetype of a line. `geom_smooth()` will draw a different line, with a different linetype, for each unique value of the variable that you map to linetype.
+
+```{r message = FALSE}
+ggplot(data = mpg) + 
+  geom_smooth(mapping = aes(x = displ, y = hwy, linetype = drv))
+```
+
+Here `geom_smooth()` separates the cars into three lines based on their `drv` value, which describes a car's drivetrain. One line describes all of the points with a `4` value, one line describes all of the points with an `f` value, and one line describes all of the points with an `r` value. Here, `4` stands for four-wheel drive, `f` for front-wheel drive, and `r` for rear-wheel drive.
+
+If this sounds strange, we can make it more clear by overlaying the lines on top of the raw data and then coloring everything according to `drv`. 
+
+```{r echo = FALSE, message = FALSE}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy, color = drv)) + 
+  geom_point() +
+  geom_smooth(mapping = aes(linetype = drv))
+```
+
+Notice that this plot contains two geoms in the same graph! If this makes you excited, buckle up. In the next section, we will learn how to place multiple geoms in the same plot.
+
+ggplot2 provides over 30 geoms, and extension packages provide even more (see <https://www.ggplot2-exts.org> for a sampling). The best way to get a comprehensive overview is the ggplot2 cheatsheet, which you can find at <http://rstudio.com/cheatsheets>. To learn more about any single geom, use help: `?geom_smooth`.
+
+Many geoms, like `geom_smooth()`, use a single geometric object to display multiple rows of data. For these geoms, you can set the `group` aesthetic to a categorical variable to draw multiple objects. ggplot2 will draw a separate object for each unique value of the grouping variable. In practice, ggplot2 will automatically group the data for these geoms whenever you map an aesthetic to a discrete variable (as in the `linetype` example). It is convenient to rely on this feature because the group aesthetic by itself does not add a legend or distinguishing features to the geoms.
+
+```{r, fig.width = 3, fig.align = 'default', out.width = "33%", message = FALSE}
+ggplot(data = mpg) +
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+              
+ggplot(data = mpg) +
+  geom_smooth(mapping = aes(x = displ, y = hwy, group = drv))
+    
+ggplot(data = mpg) +
+  geom_smooth(
+    mapping = aes(x = displ, y = hwy, color = drv),
+    show.legend = FALSE
+  )
+```
+
+To display multiple geoms in the same plot, add multiple geom functions to `ggplot()`:
+
+```{r, message = FALSE}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) +
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+
+This, however, introduces some duplication in our code. Imagine if you wanted to change the y-axis to display `cty` instead of `hwy`. You'd need to change the variable in two places, and you might forget to update one. You can avoid this type of repetition by passing a set of mappings to `ggplot()`. ggplot2 will treat these mappings as global mappings that apply to each geom in the graph.  In other words, this code will produce the same plot as the previous code:
+
+```{r, eval = FALSE}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point() + 
+  geom_smooth()
+```
+
+If you place mappings in a geom function, ggplot2 will treat them as local mappings for the layer. It will use these mappings to extend or overwrite the global mappings _for that layer only_. This makes it possible to display different aesthetics in different layers.
+
+```{r, message = FALSE}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth()
+```
+
+You can use the same idea to specify different `data` for each layer. Here, our smooth line displays just a subset of the `mpg` dataset, the subcompact cars. The local data argument in `geom_smooth()` overrides the global data argument in `ggplot()` for that layer only.
+
+```{r, message = FALSE}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth(data = filter(mpg, class == "subcompact"), se = FALSE)
+```
+
+(You'll learn how `filter()` works in the next chapter: for now, just know that this command selects only the subcompact cars.)
+
+### Exercises
+
+1.  What geom would you use to draw a line chart? A boxplot? 
+    A histogram? An area chart?
+
+1.  Run this code in your head and predict what the output will look like.
+    Then, run the code in R and check your predictions.
+    
+    ```{r, eval = FALSE}
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy, color = drv)) + 
+      geom_point() + 
+      geom_smooth(se = FALSE)
+    ```
+
+1.  What does `show.legend = FALSE` do?  What happens if you remove it?  
+    Why do you think I used it earlier in the chapter?
+
+1.  What does the `se` argument to `geom_smooth()` do?
+
+
+1.  Will these two graphs look different? Why/why not?
+
+    ```{r, eval = FALSE}
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_point() + 
+      geom_smooth()
+    
+    ggplot() + 
+      geom_point(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_smooth(data = mpg, mapping = aes(x = displ, y = hwy))
+    ```
+
+1.  Recreate the R code necessary to generate the following graphs.
+    
+    ```{r echo = FALSE, fig.width = 3, out.width = "50%", fig.align = "default", message = FALSE}
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_point() + 
+      geom_smooth(se = FALSE)
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_smooth(aes(group = drv), se = FALSE) +
+      geom_point()
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy, color = drv)) + 
+      geom_point() + 
+      geom_smooth(se = FALSE)
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_point(aes(color = drv)) + 
+      geom_smooth(se = FALSE)
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_point(aes(color = drv)) +
+      geom_smooth(aes(linetype = drv), se = FALSE)
+    ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+      geom_point(size = 4, colour = "white") + 
+      geom_point(aes(colour = drv))
+    ```
+
+## Statistical transformations
+
+Next, let's take a look at a bar chart. Bar charts seem simple, but they are interesting because they reveal something subtle about plots. Consider a basic bar chart, as drawn with `geom_bar()`. The following chart displays the total number of diamonds in the `diamonds` dataset, grouped by `cut`. The `diamonds` dataset comes in ggplot2 and contains information about ~54,000 diamonds, including the `price`, `carat`, `color`, `clarity`, and `cut` of each diamond. The chart shows that more diamonds are available with high quality cuts than with low quality cuts. 
 
 ```{r}
-perm1 %>% infer::chisq_stat(vehicle_type ~ stop_type)
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut))
 ```
 
---
+On the x-axis, the chart displays `cut`, a variable from `diamonds`. On the y-axis, it displays count, but count is not a variable in `diamonds`! Where does count come from? Many graphs, like scatterplots, plot the raw values of your dataset. Other graphs, like bar charts, calculate new values to plot:
 
-## Another permutation
+* bar charts, histograms, and frequency polygons bin your data 
+  and then plot bin counts, the number of points that fall in each bin.
 
-```{r include=FALSE}
-(perm2 <- car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1, type = "permute") %>% 
-  ungroup() %>% 
-  dplyr::select(-replicate) %>% 
-  sample_n(size = nrow(car_stop)))
+* smoothers fit a model to your data and then plot predictions from the
+  model.
+
+* boxplots compute a robust summary of the distribution and then display a 
+  specially formatted box.
+
+The algorithm used to calculate new values for a graph is called a __stat__, short for statistical transformation. The figure below describes how this process works with `geom_bar()`.
+
+```{r, echo = FALSE, out.width = "100%"}
+knitr::include_graphics("images/visualization-stat-bar.png")
 ```
+
+You can learn which stat a geom uses by inspecting the default value for the `stat` argument. For example, `?geom_bar` shows that the default value for `stat` is "count", which means that `geom_bar()` uses `stat_count()`. `stat_count()` is documented on the same page as `geom_bar()`, and if you scroll down you can find a section called "Computed variables". That describes how it computes two new variables: `count` and `prop`.
+
+You can generally use geoms and stats interchangeably. For example, you can recreate the previous plot using `stat_count()` instead of `geom_bar()`:
 
 ```{r}
-perm2 %>% infer::chisq_stat(vehicle_type ~ stop_type)
+ggplot(data = diamonds) + 
+  stat_count(mapping = aes(x = cut))
 ```
 
----
+This works because every geom has a default stat; and every stat has a default geom. This means that you can typically use geoms without worrying about the underlying statistical transformation. There are three reasons you might need to use a stat explicitly:
 
-## What does the distribution of multiple repetitions of the permuted data look like?
+1.  You might want to override the default stat. In the code below, I change 
+    the stat of `geom_bar()` from count (the default) to identity. This lets 
+    me map the height of the bars to the raw values of a $y$ variable. 
+    Unfortunately when people talk about bar charts casually, they might be
+    referring to this type of bar chart, where the height of the bar is already
+    present in the data, or the previous bar chart where the height of the bar
+    is generated by counting rows.
+    
+    ```{r, warning = FALSE}
+    demo <- tribble(
+      ~cut,         ~freq,
+      "Fair",       1610,
+      "Good",       4906,
+      "Very Good",  12082,
+      "Premium",    13791,
+      "Ideal",      21551
+    )
+    
+    ggplot(data = demo) +
+      geom_bar(mapping = aes(x = cut, y = freq), stat = "identity")
+    ```
+    
+    (Don't worry that you haven't seen `<-` or `tribble()` before. You might be
+    able to guess at their meaning from the context, and you'll learn exactly
+    what they do soon!)
 
-```{r echo=FALSE}
-( car_chisq <- car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1000, type = "permute") %>% 
-  calculate(stat = "Chisq") )
+1.  You might want to override the default mapping from transformed variables
+    to aesthetics. For example, you might want to display a bar chart of
+    proportion, rather than count:
+    
+    ```{r}
+    ggplot(data = diamonds) + 
+      geom_bar(mapping = aes(x = cut, y = ..prop.., group = 1))
+    ```
+
+    To find the variables computed by the stat, look for the help section
+    titled "computed variables".
+    
+1.  You might want to draw greater attention to the statistical transformation
+    in your code. For example, you might use `stat_summary()`, which
+    summarises the y values for each unique x value, to draw 
+    attention to the summary that you're computing:
+    
+    ```{r}
+    ggplot(data = diamonds) + 
+      stat_summary(
+        mapping = aes(x = cut, y = depth),
+        fun.ymin = min,
+        fun.ymax = max,
+        fun.y = median
+      )
+    ```
+    
+ggplot2 provides over 20 stats for you to use. Each stat is a function, so you can get help in the usual way, e.g. `?stat_bin`. To see a complete list of stats, try the ggplot2 cheatsheet.
+
+### Exercises
+
+1.  What is the default geom associated with `stat_summary()`? How could
+    you rewrite the previous plot to use that geom function instead of the 
+    stat function?
+
+1.  What does `geom_col()` do? How is it different to `geom_bar()`?
+
+1.  Most geoms and stats come in pairs that are almost always used in 
+    concert. Read through the documentation and make a list of all the 
+    pairs. What do they have in common?
+
+1.  What variables does `stat_smooth()` compute? What parameters control
+    its behaviour?
+
+1.  In our proportion bar chart, we need to set `group = 1`. Why? In other
+    words what is the problem with these two graphs?
+    
+    ```{r, eval = FALSE}
+    ggplot(data = diamonds) + 
+      geom_bar(mapping = aes(x = cut, y = ..prop..))
+    ggplot(data = diamonds) + 
+      geom_bar(mapping = aes(x = cut, fill = color, y = ..prop..))
+    ```
+  
+
+## Position adjustments
+
+There's one more piece of magic associated with bar charts. You can colour a bar chart using either the `colour` aesthetic, or, more usefully, `fill`:
+
+```{r out.width = "50%", fig.align = "default"}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, colour = cut))
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = cut))
 ```
+## Position adjustments
 
----
-
-layout: false
-
-<small>The distribution of multiple repetitions of the permuted data</small>
-
-```{r echo=FALSE, fig.height=3.7}
-ggplot(data = car_chisq, mapping = aes(x = stat)) +
-  geom_density() +
-  geom_vline(xintercept = chisq.test(car_stop$stop_type, car_stop$vehicle_type)$statistic, 
-             color = "red") +
-  xlab("") +
-  ylab("") +
-  xlim(c(0, 14))
-```
-
---
-
-<small>Recall the traditional method using the Chi-square distribution </small>
-
-```{r echo=FALSE, fig.height=3.7}
-chisq_dist
-```
-
----
-
-class: inverse
-layout: true
-
-.footer[Slides available at <http://bit.ly/infer-useR> <br> Package webpage at <https://infer.netlify.com>]
-
----
-
-<!-- So how did I generate this code to permute? -->
-
-## Objectives of the `infer` package
-
-- Implement common classical inferential techniques in a `tidyverse`-friendly framework that is expressive of the underlying procedure. 
---
-
-  - Dataframe in, dataframe out
-  - Compose tests and intervals with pipes
-  - Unite computational and approximation methods
-  - Reading a chain of `infer` code should describe the inferential procedure
-
----
-
-layout: false
-class: inverse, center, middle
-
-# The `infer` verbs
-
-
----
-
-![](infer.073.jpeg)
-
-
----
-
-![](infer.074.jpeg)
-
-
----
-
-![](infer.075.jpeg)
-
-
----
-
-![](infer.076.jpeg)
-
-
----
-
-![](infer.077.jpeg)
-
-
----
-
-![](infer.078.jpeg)
-
-
----
-
-![](infer.079.jpeg)
-
-
----
-
-![](infer.080.jpeg)
-
-
----
-
-![](infer.081.jpeg)
-
-
----
-
-![](infer.082.jpeg)
-
-
----
-
-![](infer.084.jpeg)
-
----
-
-class: inverse
-layout: true
-
-.footer[Slides available at <http://bit.ly/infer-useR> <br> Package webpage at <https://infer.netlify.com>]
-
----
+Note what happens if you map the fill aesthetic to another variable, like `clarity`: the bars are automatically stacked. Each colored rectangle represents a combination of `cut` and `clarity`.
 
 ```{r}
-library(infer)
-car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1000, type = "permute") %>% 
-  calculate(stat = "Chisq")
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity))
+```
+## Position adjustments
+
+The stacking is performed automatically by the __position adjustment__ specified by the `position` argument. If you don't want a stacked bar chart, you can use one of three other options: `"identity"`, `"dodge"` or `"fill"`.
+## Position adjustments
+
+*   `position = "identity"` will place each object exactly where it falls in 
+    the context of the graph. This is not very useful for bars, because it
+    overlaps them. To see that overlapping we either need to make the bars
+    slightly transparent by setting `alpha` to a small value, or completely
+    transparent by setting `fill = NA`.
+    
+    ```{r out.width = "50%", fig.align = "default"}
+    ggplot(data = diamonds, mapping = aes(x = cut, fill = clarity)) + 
+      geom_bar(alpha = 1/5, position = "identity")
+    ggplot(data = diamonds, mapping = aes(x = cut, colour = clarity)) + 
+      geom_bar(fill = NA, position = "identity")
+    ```
+    
+    The identity position adjustment is more useful for 2d geoms, like points,
+    where it is the default.
+## Position adjustments
+    
+*   `position = "fill"` works like stacking, but makes each set of stacked bars
+    the same height. This makes it easier to compare proportions across 
+    groups.
+
+    ```{r}
+    ggplot(data = diamonds) + 
+      geom_bar(mapping = aes(x = cut, fill = clarity), position = "fill")
+    ```
+## Position adjustments
+
+*   `position = "dodge"` places overlapping objects directly _beside_ one 
+    another. This makes it easier to compare individual values.
+
+    ```{r}
+    ggplot(data = diamonds) + 
+      geom_bar(mapping = aes(x = cut, fill = clarity), position = "dodge")
+    ```
+
+There's one other type of adjustment that's not useful for bar charts, but it can be very useful for scatterplots. Recall our first scatterplot. Did you notice that the plot displays only 126 points, even though there are 234 observations in the dataset?
+
+```{r echo = FALSE}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+```
+
+## Position adjustments
+
+The values of `hwy` and `displ` are rounded so the points appear on a grid and many points overlap each other. This problem is known as __overplotting__. This arrangement makes it hard to see where the mass of the data is. Are the data points spread equally throughout the graph, or is there one special combination of `hwy` and `displ` that contains 109 values? 
+
+You can avoid this gridding by setting the position adjustment to "jitter".  `position = "jitter"` adds a small amount of random noise to each point. This spreads the points out because no two points are likely to receive the same amount of random noise.
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), position = "jitter")
+```
+
+Adding randomness seems like a strange way to improve your plot, but while it makes your graph less accurate at small scales, it makes your graph _more_ revealing at large scales. Because this is such a useful operation, ggplot2 comes with a shorthand for `geom_point(position = "jitter")`: `geom_jitter()`.
+
+To learn more about a position adjustment, look up the help page associated with each adjustment: `?position_dodge`, `?position_fill`, `?position_identity`, `?position_jitter`, and `?position_stack`.
+
+### Exercises
+
+1.  What is the problem with this plot? How could you improve it?
+
+    ```{r}
+    ggplot(data = mpg, mapping = aes(x = cty, y = hwy)) + 
+      geom_point()
+    ```
+
+1.  What parameters to `geom_jitter()` control the amount of jittering?
+
+1.  Compare and contrast `geom_jitter()` with `geom_count()`.
+
+1.  What's the default position adjustment for `geom_boxplot()`? Create
+    a visualisation of the `mpg` dataset that demonstrates it.
+
+
+### Exercises
+
+1.  Turn a stacked bar chart into a pie chart using `coord_polar()`.
+
+1.  What does `labs()` do? Read the documentation.
+
+1.  What's the difference between `coord_quickmap()` and `coord_map()`?
+
+1.  What does the plot below tell you about the relationship between city
+    and highway mpg? Why is `coord_fixed()` important? What does 
+    `geom_abline()` do?
+    
+    ```{r, fig.asp = 1, out.width = "50%"}
+    ggplot(data = mpg, mapping = aes(x = cty, y = hwy)) +
+      geom_point() + 
+      geom_abline() +
+      coord_fixed()
+    ```
+
+## The layered grammar of graphics
+
+In the previous sections, you learned much more than how to make scatterplots, bar charts, and boxplots. You learned a foundation that you can use to make _any_ type of plot with ggplot2. To see this, let's add position adjustments, stats, coordinate systems, and faceting to our code template:
+
+```
+ggplot(data = <DATA>) + 
+  <GEOM_FUNCTION>(
+     mapping = aes(<MAPPINGS>),
+     stat = <STAT>, 
+     position = <POSITION>
+  ) +
+  <COORDINATE_FUNCTION> +
+  <FACET_FUNCTION>
 ```
 
 
----
-
-## Back to the example
-
-```{r fig.height=3.5}
-null_distn <- car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 1000, type = "permute") %>% 
-  calculate(stat = "Chisq") 
-null_distn %>% visualize()
-```
-
----
-
-## Get the simulation-based p-value
-
-```{r fig.height=3.5}
-Chisq_obs <- car_stop %>% 
-  specify(stop_type ~ vehicle_type) %>% 
-  calculate(stat = "Chisq") 
-null_distn %>% 
-  get_pvalue(obs_stat = Chisq_obs, direction = "greater")
-```
-
----
-
-## Visualize it
-
-```{r fig.height=3.5}
-null_distn %>% 
-  visualize(obs_stat = Chisq_obs, direction = "greater")
-```
-
----
-
-## Compare to theoretical
-
-```{r include=FALSE}
-theme_set(theme_gray(base_size = 18))
-```
-
-```{r fig.height=3.5, warning=TRUE}
-null_distn %>% 
-  visualize(method = "both", obs_stat = Chisq_obs, 
-            direction = "greater")
-```
-
----
-
-## What's to come with `infer`
-
-- Generalized input to `calculate()`
-  - For example, `calculate(trimmed_mean)`
-- [More to-dos](https://infer-dev.netlify.com/to-do)
-- Feature requests and bug reports at https://github.com/andrewpbray/infer/issues
-
----
-
-class: inverse
-layout: false
-
-## More info and practice
-
-- [infer.netlify.com](https://infer.netlify.com) (or [infer-dev.netlify.com](https://infer-dev.netlify.com))
-  - Many examples under Articles with more to come
-- To be fully implemented in [ModernDive.com](www.ModernDive.com)
-      - [Sign up](http://eepurl.com/cBkItf) for the ModernDive mailing list
-- DataCamp courses with `infer` + one more coming
-  - [Inference for Numerical Data](https://www.datacamp.com/courses/inference-for-numerical-data)
-  - [Inference for Categorical Data](https://www.datacamp.com/courses/inference-for-categorical-data)
-  - [Inference for Regression](https://www.datacamp.com/courses/inference-for-linear-regression)
-- Keep an eye on the [`tidymodels` meta-package](https://github.com/tidymodels/tidymodels)
----
-
-layout: false
-class: inverse, middle
-
-<center>
-<a href="https://www.tidyverse.org/learn">
-<img src="figure/tidyverse.png" style="width: 200px;"/>
-</a>&emsp;&emsp;<a href="https://moderndive.netlify.com"> 
-<img src="figure/dark_vert.png" style="width: 221px;"/></a>&emsp;&emsp;<a href="https://infer.netlify.com"> 
-<img src="figure/infer_gnome.png" style="width: 230px;"/></a></center>
-
-## Thanks for attending! Contact me: [Email](mailto:chester@datacamp.com) or [Twitter](https://twitter.com/old_man_chester)
-- Thanks to [Albert Y. Kim](https://twitter.com/rudeboybert), [Andrew Bray](https://andrewpbray.github.io), and [Alison Hill](https://twitter.com/apreshill)
-- Slides created via the R package [xaringan](https://github.com/yihui/xaringan) by Yihui Xie
-- Slides' source code at <https://github.com/ismayc/talks/>
